--- a/src/templates/views/about.hbs
+++ b/src/templates/views/about.hbs
@@ -55,7 +55,6 @@
 				action="http://webdesign-finder.com/" method="get">
 				<input class="form-control form-control-sm ml-3 w-75 border-0" type="text" placeholder="Search"
 					aria-label="Search">
-				{{!-- <i class="fas fa-search" aria-hidden="true"></i> --}}
 			</form>
 		</div>
 	</div>
@@ -153,7 +152,7 @@
 											</li>
 
 											<li>
-												<a href="/academy">IO Academy</a>
+												<a href="/academy">I/O Academy</a>
 											</li>
 
 											<li>
@@ -215,7 +214,7 @@
 
 
 	{{!-- Brief Info on first pavilion--}}
-	<section class="ls ms s-pt-80 s-pb-20 s-pt-lg-100 s-pb-lg-50 s-pt-xl-150 s-pb-xl-80 c-gutter-60 c-mb-50" id="advantage">
+	<section class="s-pt-80 s-pb-20 s-pt-lg-100 s-pb-lg-50 s-pt-xl-150 s-pb-xl-80 c-gutter-60 c-mb-50" id="advantage">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center" id="price">
@@ -223,18 +222,52 @@
 					<h3 class="text-center indigo-text">Technologies</h3>
 				</div>
 				<p>
-					Is a modern Information and Communication Technology Company with qualified and friendly staff capable of turning your ICT issues into the futuristic innovation you have in mind. We offer various services ranging from ICT consultancy to Software services.
+					We are a modern Information and Communication Technology Company with qualified and friendly staff
+					capable of turning your ICT issues into the futuristic innovation you have in mind. We offer various
+					services ranging from ICT consultancy to Software services.
 				</p>
 				<p>
-					Our company is known to have a meticulous approach to work, paying attention to even the most minuscule detail. Multitask and work under pressure thus effectively managing our time to meet deadlines while giving you quality results with high standards.
+					Our company is known to have a meticulous approach to work, paying attention to even the most
+					minuscule detail. Multitask and work under pressure thus effectively managing our time to meet
+					deadlines while giving you quality results with high standards.
 				</p>
 				<p>
-					Through our services and dedicated commitment to your innovative future, we help you take your business(es) into the next level of innovation bringing about rapid and positive turnover.
+					Through our services and dedicated commitment to your innovative future, we help you take your
+					business(es) into the next level of innovation bringing about rapid and positive turnover.
 				</p>
 			</div>
 		</div>
 	</section>
 	{{!-- Brief info on first pavilion--}}
+
+	<!-- start work-process -->
+	<section class="bg-maincolor s-pt-80 s-pb-20 s-pt-lg-100 s-pb-lg-50 s-pt-xl-150 s-pb-xl-80 c-gutter-60 c-mb-50">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 text-center" id="price">
+					<h5 class="special-heading text-center mb-2">Why Choose Us</h5>
+					<h3 class="text-center">Trusted company in IT services</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 animate" data-animation="fadeInLeftBig">
+					<h5>Conversation with Client</h5>
+					<p>We discuss the problem in-depth with the Client. Understand the requirements and what's
+						expected of us.</p>
+				</div>
+				<div class="col-lg-4 animate" data-animation="fadeInLeftBig">
+					<h5>Research the relevant problem</h5>
+					<p>We research and break down the task into smaller and simpler units, assign tasks and set a
+						deadline.</p>
+				</div>
+				<div class="col-lg-4 animate" data-animation="fadeInLeftBig">
+					<h5>Start the project</h5>
+					<p>We start the project, implementing Agile Methodology.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end work-process -->
 
 
 
@@ -251,9 +284,8 @@
 
 				<div class="col-lg-4 col-sm-6">
 
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
-						<div class="item-media shadow">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;"  data-animation="fadeInLeftBig">
+						<div class="item-media">
 							<img src="services/consult.jpg" alt="" style="min-height: 100%;">
 						</div>
 						<div class="item-content">
@@ -269,9 +301,8 @@
 					</div>
 				</div><!-- .col-* -->
 				<div class="col-lg-4 col-sm-6">
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
-						<div class="item-media shadow">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;" data-animation="fadeInLeftBig">
+						<div class="item-media">
 							<img src="services/mobile-web.jpg" alt="" style="min-height: 100%;">
 						</div>
 						<div class="item-content">
@@ -289,9 +320,8 @@
 				</div><!-- .col-* -->
 				<div class="col-lg-4 col-sm-6">
 
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
-						<div class="item-media shadow">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;" data-animation="fadeInLeftBig">
+						<div class="item-media">
 							<img src="services/integration.jpg" alt="" style="min-height: 100%;">
 						</div>
 						<div class="item-content">
@@ -309,9 +339,8 @@
 				</div><!-- .col-* -->
 				<div class="col-lg-4 col-sm-6">
 
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
-						<div class="item-media shadow">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;" data-animation="fadeInRightBig">
+						<div class="item-media">
 							<img src="services/enterprise.jpg" alt="">
 						</div>
 						<div class="item-content">
@@ -330,9 +359,8 @@
 				</div><!-- .col-* -->
 				<div class="col-lg-4 col-sm-6">
 
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
-						<div class="item-media shadow">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;" data-animation="fadeInRightBig">
+						<div class="item-media">
 							<img src="services/cloud.jpg" alt="">
 						</div>
 						<div class="item-content">
@@ -350,8 +378,7 @@
 					</div>
 				</div><!-- .col-* -->
 				<div class="col-lg-4 col-sm-6">
-					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
-						style="min-height: 100%;">
+					<div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center animate" style="min-height: 100%;" data-animation="fadeInRightBig">
 						<div class="item-media">
 							<img src="services/academy.jpg" alt="">
 						</div>
@@ -359,13 +386,13 @@
 							<h5 class="service-title">
 								IO Academy
 							</h5>
-					
+
 							<p>
 								IO Academy is a Training and Knowledge Transfer, With a team of multi-talented
 								individuals, we also provide trainings to interested parties on varieties of
 								Packages.
 							</p>
-					
+
 						</div>
 					</div>
 					{{!-- <div class="vertical-item rounded rounded-image-top hero-bg content-padding padding-small text-center"
@@ -441,7 +468,7 @@
 							</li>
 							<li class="cat-item">
 								<i class="fas fa-check text-info mr-3"></i>
-								<a href="/academy">IO Academy</a>
+								<a href="/academy">I/O Academy</a>
 							</li>
 							<li class="cat-item">
 								<i class="fas fa-check text-info mr-3"></i>
