--- a/src/templates/views/academy.hbs
+++ b/src/templates/views/academy.hbs
@@ -154,7 +154,7 @@
                                             </li>
 
                                             <li class="active">
-                                                <a href="/academy">IO Academy</a>
+                                                <a href="/academy">I/O Academy</a>
                                             </li>
 
                                             <li>
@@ -221,7 +221,7 @@
         <div class="container">
             <div class="col-lg-8 offset-lg-2">
                 <h5 class="special-heading text-center">Join Our</h5>
-                <h1 class="text-center text-primary">IO Academy</h1>
+                <h1 class="text-center text-primary">I/O Academy</h1>
                 <p class="text-center big">Join Our Training Sessions and Build your expertise, Best Student
                     Gets an Internship with First Pavilion.</p>
             </div>
@@ -413,7 +413,7 @@
                             </li>
                             <li class="cat-item">
                                 <i class="fas fa-check text-info mr-3"></i>
-                                <a href="/academy">IO Academy</a>
+                                <a href="/academy">I/O Academy</a>
                             </li>
                             <li class="cat-item">
                                 <i class="fas fa-check text-info mr-3"></i>
