--- a/src/templates/views/contact.hbs
+++ b/src/templates/views/contact.hbs
@@ -154,7 +154,7 @@
 											</li>
 
 											<li>
-												<a href="/academy">IO Academy</a>
+												<a href="/academy">I/O Academy</a>
 											</li>
 
 											<li class="active">
@@ -347,7 +347,7 @@
 								</li>
 								<li class="cat-item">
 									<i class="fas fa-check text-info mr-3"></i>
-									<a href="/academy">IO Academy</a>
+									<a href="/academy">I/O Academy</a>
 								</li>
 							</ul>
 						</div>
