--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -157,7 +157,7 @@
                                             </li>
 
                                             <li>
-                                                <a href="/academy">IO Academy</a>
+                                                <a href="/academy">I/O Academy</a>
                                             </li>
 
                                             <li>
@@ -837,7 +837,7 @@
                     <div class="row text-center">
                         <div class="col-lg-8 offset-lg-2" id="price">
                             <h5 class="special-heading text-center mb-2">Become An ICT Expert At</h5>
-                            <h1 class="text-center">IO Academy</h1>
+                            <h1 class="text-center">I/O Academy</h1>
                             <p class="text-center big">Join Our Training Sessions and Build your expertise, Best Student
                                 Gets an Internship with First Pavilion</p>
                             <a class="btn btn-maincolor mt-4" href="/academy"><span>Know more</span></a>
@@ -1009,7 +1009,7 @@
                                     </li>
                                     <li class="cat-item">
                                         <i class="fas fa-check text-info mr-3"></i>
-                                        <a href="/academy">IO Academy</a>
+                                        <a href="/academy">I/O Academy</a>
                                     </li>
                                     <li class="cat-item">
                                         <i class="fas fa-check text-info mr-3"></i>
