--- a/src/templates/views/contact.hbs
+++ b/src/templates/views/contact.hbs
@@ -43,22 +43,6 @@
 
 	<div class="preloader text-center" style="padding-top: 50vh;">
 		<div class="spinner-grow text-primary"></div>
-		{{!-- <div class="preloader_image"></div> --}}
-	</div>
-
-	<!-- search modal -->
-	<div class="modal" tabindex="-1" role="dialog" aria-labelledby="search_modal" id="search_modal">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<div class="widget widget_search">
-			<form class="form-inline d-flex justify-content-center md-form form-sm mt-0 search-form"
-				action="http://webdesign-finder.com/" method="get">
-				<input class="form-control form-control-sm ml-3 w-75 border-0" type="text" placeholder="Search"
-					aria-label="Search">
-				{{!-- <i class="fas fa-search" aria-hidden="true"></i> --}}
-			</form>
-		</div>
 	</div>
 
 	<!-- wrappers for visual page editor and boxed version of template -->
@@ -73,6 +57,33 @@
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-md-6 text-md-left text-center">
+							<ul class="top-includes">
+								<li>
+									<span class="icon-inline">
+										<span class="icon-styled color-main2 fs-14">
+											<img src="image/fp-logo-big.png" width="20" height="20"
+												alt="FirstPavilionLogo">
+										</span>
+										<span class="small-text">
+											<span class="small-text">
+												<a class="hover-main2" href="/"> First Pavilion Technologies</a>
+											</span>
+										</span>
+									</span>
+								</li>
+								{{!-- <li>
+																<span class="icon-inline">
+																	<span class="icon-styled color-main2 fs-14">
+																		<i class="fa fa-user"></i>
+																	</span>
+																	<span class="small-text">
+																		<a class="hover-main2" href="/login"> Login in</a>
+																	</span>
+																</span>
+															</li> --}}
+							</ul>
+						</div>
+						<div class="col-md-6 text-center text-md-right d-none d-md-block">
 							<ul class="top-includes">
 								<li>
 									<span class="icon-inline">
@@ -91,33 +102,6 @@
 										</span>
 										<span class="small-text">
 											<a href="mailto:info@firstpavitech.com">info@firstpavitech.com</a>
-										</span>
-									</span>
-								</li>
-							</ul>
-						</div>
-						<div class="col-md-6 text-center text-md-right d-none d-md-block">
-							<ul class="top-includes">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main2 fs-14">
-											<img src="image/fp-logo-big.png" width="20" height="20"
-												alt="FirstPavilionLogo">
-										</span>
-										<span class="small-text">
-											<span class="small-text">
-												<a class="hover-main2" href="/"> First Pavilion Technologies</a>
-											</span>
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main2 fs-14">
-											<i class="fa fa-user"></i>
-										</span>
-										<span class="small-text">
-											<a class="hover-main2" href="/login"> Login in</a>
 										</span>
 									</span>
 								</li>
@@ -164,22 +148,6 @@
 
 									</nav>
 									<!-- eof main nav -->
-
-									<!--hidding includes on small devices. They are duplicated in topline-->
-									<ul class="top-includes d-none d-xl-block search-icon">
-
-										<li>
-											<!--modal search-->
-											<span>
-												<a href="" class="search_modal_button">
-													<i class="fa fa-search"></i>
-												</a>
-											</span>
-
-										</li>
-
-									</ul>
-
 								</div>
 							</div>
 						</div>
@@ -195,7 +163,7 @@
 					<div class="row">
 						<div class="divider-60"></div>
 						<div class="col-md-12 text-center">
-							<h1>Co-working Space</h1>
+							<h1>Contact Us</h1>
 						</div>
 						<div class="divider-50"></div>
 					</div>
