--- a/public/css/testimonie.css
+++ b/public/css/testimonie.css
@@ -29,3 +29,47 @@ img.signature{
 ul.slides img{
     height: 100vh;
 }
+
+@media (max-width: 576px){
+    .about-section h3{
+        font-size: 2.3rem;
+        font-weight: 100;
+        line-height:1.2
+    }
+
+    .display-4{
+        font-size: 2.3rem;
+    }
+
+    .special-heading + h3{
+        font-size: 30px;
+    }
+
+    li{
+        font-size: 0.9rem;
+    }
+    .about-section li{
+        font-size: 0.9rem;
+    }
+
+    h5.special-heading {
+        line-height: 1.5;
+    }
+
+    .special-heading + h1{
+        margin-top: 10px;
+    }
+
+    a.btn{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    footer img{
+        margin-bottom: 20px;
+    }
+
+    button#contact_form_submit{
+        width: 100%;
+    }
+}
