--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -1,36 +1,32 @@
-{{!-- <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
-
 <head>
-    <title>MaxiCom - Internedt Provider HTML template</title>
-    <meta charset="utf-8">
-    <!--[if IE]>
+  <title>First Pavilion Technologies | Official</title>
+  <meta charset="utf-8">
+  <!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<![endif]-->
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <!-- <link rel="stylesheet" href="css/font-awesome.css"> -->
-    <link rel="stylesheet" href="css/main.css" class="color-switcher-link">
-    <!-- <script src="js/vendor/modernizr-2.6.2.min.js"></script> -->
+  {{!-- share social media icons --}}
+  <script type='text/javascript'
+    src='https://platform-api.sharethis.com/js/sharethis.js#property=5f1584c66925780012922c31&product=sticky-share-buttons&cms=sop'
+    async='async'></script>
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="css/main.css" class="color-switcher-link">
+  <link rel="stylesheet" href="css/testimonie.css">
+  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
-    <!--[if lt IE 9]>
+  <!--[if lt IE 9]>
 		<script src="js/vendor/html5shiv.min.js"></script>
 		<script src="js/vendor/respond.min.js"></script>
 		<script src="js/vendor/jquery-1.12.4.min.js"></script>
 	<![endif]-->
 
 </head>
-
-<body> --}}
-
-  <h1>hello Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ex, corporis enim neque, ratione cum cumque eos maiores quia sit quas molestiae, vitae recusandae quos non eveniet saepe! Sapiente, officia!</h1>
