--- a/src/templates/views/contact.hbs
+++ b/src/templates/views/contact.hbs
@@ -6,40 +6,13 @@
 <html class="no-js">
 <!--<![endif]-->
 
-<head>
-	<title>First Pavilion Technologies | Official</title>
-	<meta charset="utf-8">
-	<!--[if IE]>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<![endif]-->
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="image/fp-logo-big.png" type="image/x-icon">
-	{{!-- share social media icons --}}
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-	<!-- Bootstrap core CSS -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Material Design Bootstrap -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/animations.css">
-	<link rel="stylesheet" href="css/main.css" class="color-switcher-link">
-	<link rel="stylesheet" href="css/testimonie.css">
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
-
-	<!--[if lt IE 9]>
-		<script src="js/vendor/html5shiv.min.js"></script>
-		<script src="js/vendor/respond.min.js"></script>
-		<script src="js/vendor/jquery-1.12.4.min.js"></script>
-	<![endif]-->
-
-</head>
+{{!-- css header files --}}
+{{>header}}
 
 <body>
 	<!--[if lt IE 9]>
-		<div class="bg-danger text-center">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" class="color-main">upgrade your browser</a> to improve your experience.</div>
-	<![endif]-->
+			<div class="bg-danger text-center">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" class="color-main">upgrade your browser</a> to improve your experience.</div>
+		<![endif]-->
 
 	<div class="preloader text-center" style="padding-top: 50vh;">
 		<div class="spinner-grow text-primary"></div>
@@ -49,68 +22,8 @@
 	<div id="canvas">
 		<div id="box_wrapper">
 
-			<!-- template sections -->
-
-			<!--topline section visible only on small screens|-->
-
-			<section class="page_topline ls s-borderbottom c-my-20">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-md-6 text-md-left text-center">
-							<ul class="top-includes">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main2 fs-14">
-											<img src="image/fp-logo-big.png" width="20" height="20"
-												alt="FirstPavilionLogo">
-										</span>
-										<span class="small-text">
-											<span class="small-text">
-												<a class="hover-main2" href="/"> First Pavilion Technologies</a>
-											</span>
-										</span>
-									</span>
-								</li>
-								{{!-- <li>
-																<span class="icon-inline">
-																	<span class="icon-styled color-main2 fs-14">
-																		<i class="fa fa-user"></i>
-																	</span>
-																	<span class="small-text">
-																		<a class="hover-main2" href="/login"> Login in</a>
-																	</span>
-																</span>
-															</li> --}}
-							</ul>
-						</div>
-						<div class="col-md-6 text-center text-md-right d-none d-md-block">
-							<ul class="top-includes">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main fs-14">
-											<i class="fa fa-phone"></i>
-										</span>
-										<span class="small-text">
-											<a href="tel:+2349020455349">+234 902 045 5349</a>
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main fs-14">
-											<i class="fa fa-pen"></i>
-										</span>
-										<span class="small-text">
-											<a href="mailto:info@firstpavitech.com">info@firstpavitech.com</a>
-										</span>
-									</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!--eof topline-->
+			{{!-- topbar menus --}}
+			{{>topbar}}
 
 			<div class="header_absolute header_layout_1">
 				<!-- header with two Bootstrap columns - left for logo and right for navigation and includes (search, social icons, additional links and buttons etc -->
@@ -156,6 +69,7 @@
 					<span class="toggle_menu position-fixed" style="top: 100px"><span></span></span>
 				</header>
 			</div>
+			
 			<section class="page_title cs s-pt-60 s-pb-10 s-pt-lg-130 s-pb-lg-60 page_title text-center page_slider">
 				<div id="particles-js"></div>
 				<img src="image/slide.jpg" alt="" style="height: 55vh;">
@@ -177,214 +91,110 @@
 					</li>
 				</ol>
 			</section>
-		</div>
 
+			<section class="ls s-py-80 s-py-lg-120 s-py-xl-160 c-gutter-100 container-px-30">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-7 animate" data-animation="scaleAppear">
 
-		<section class="ls s-py-80 s-py-lg-120 s-py-xl-160 c-gutter-100 container-px-30">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7 animate" data-animation="scaleAppear">
+							<h5 class="text-center text-md-left special-heading">
+								Contact Us Today<br>
+								<span class="text-uppercase">For your Service</span>
+							</h5>
+							<div class="divider-50 d-none d-xl-block"></div>
+							<form class="contact-form c-mb-10 c-mb-md-20 c-gutter-20 text-center text-md-left"
+								method="post" action="http://webdesign-finder.com/">
 
-						<h5 class="text-center text-md-left special-heading">
-							Contact Us Today<br>
-							<span class="text-uppercase">For your Service</span>
-						</h5>
-						<div class="divider-50 d-none d-xl-block"></div>
-						<form class="contact-form c-mb-10 c-mb-md-20 c-gutter-20 text-center text-md-left" method="post"
-							action="http://webdesign-finder.com/">
+								<div class="row">
 
-							<div class="row">
-
-								<div class="col-sm-6">
-									<div class="form-group has-placeholder">
-										<label for="name">Full Name </label>
-										<i class="fa fa-user color-main"></i>
-										<input type="text" aria-required="true" size="30" name="name" id="name"
-											class="form-control" placeholder="Full Name">
+									<div class="col-sm-6">
+										<div class="form-group has-placeholder">
+											<label for="name">Full Name </label>
+											<i class="fa fa-user color-main"></i>
+											<input type="text" aria-required="true" size="30" name="name" id="name"
+												class="form-control" placeholder="Full Name">
+										</div>
 									</div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group has-placeholder">
-										<label for="phone">Phone Number</label>
-										<i class="fa fa-phone color-main"></i>
-										<input type="text" aria-required="true" size="30" name="phone" id="phone"
-											class="form-control" placeholder="Phone Number">
+									<div class="col-sm-6">
+										<div class="form-group has-placeholder">
+											<label for="phone">Phone Number</label>
+											<i class="fa fa-phone color-main"></i>
+											<input type="text" aria-required="true" size="30" name="phone" id="phone"
+												class="form-control" placeholder="Phone Number">
+										</div>
 									</div>
-								</div>
 
-							</div>
-
-							<div class="row">
-								<div class="col-sm-12">
-									<div class="form-group has-placeholder">
-										<label for="email">Email address</label>
-										<i class="fa fa-envelope color-main"></i>
-										<input type="email" aria-required="true" size="30" name="email" id="email"
-											class="form-control" placeholder="E-mail">
-									</div>
 								</div>
 
+								<div class="row">
+									<div class="col-sm-12">
+										<div class="form-group has-placeholder">
+											<label for="email">Email address</label>
+											<i class="fa fa-envelope color-main"></i>
+											<input type="email" aria-required="true" size="30" name="email" id="email"
+												class="form-control" placeholder="E-mail">
+										</div>
+									</div>
 
-								<div class="col-sm-12">
 
-									<div class="form-group has-placeholder">
-										<label for="message">Message</label>
-										<i class="fa fa-edit color-main"></i>
-										<textarea aria-required="true" rows="6" cols="45" name="message" id="message"
-											class="form-control" placeholder="Your Message"></textarea>
+									<div class="col-sm-12">
+
+										<div class="form-group has-placeholder">
+											<label for="message">Message</label>
+											<i class="fa fa-edit color-main"></i>
+											<textarea aria-required="true" rows="6" cols="45" name="message"
+												id="message" class="form-control" placeholder="Your Message"></textarea>
+										</div>
+									</div>
+
+								</div>
+								<div class="row">
+
+									<div class="col-sm-12">
+										<div class="form-check">
+											<input type="checkbox" class="form-check-input" id="exampleCheck1">
+											<label class="form-check-label" for="exampleCheck1">I agree that my
+												submitted
+												data is being collected and stored.</label>
+										</div>
 									</div>
 								</div>
+								<div class="row">
 
-							</div>
-							<div class="row">
+									<div class="col-sm-12 text-center text-md-left mt-30">
 
-								<div class="col-sm-12">
-									<div class="form-check">
-										<input type="checkbox" class="form-check-input" id="exampleCheck1">
-										<label class="form-check-label" for="exampleCheck1">I agree that my submitted
-											data is being collected and stored.</label>
+										<div class="form-group">
+											<button type="submit" id="contact_form_submit" name="contact_submit"
+												class="btn btn-maincolor"><span>Submit</span>
+											</button>
+										</div>
 									</div>
-								</div>
-							</div>
-							<div class="row">
 
-								<div class="col-sm-12 text-center text-md-left mt-30">
-
-									<div class="form-group">
-										<button type="submit" id="contact_form_submit" name="contact_submit"
-											class="btn btn-maincolor"><span>Submit</span>
-										</button>
-									</div>
 								</div>
 
-							</div>
-
-						</form>
-					</div>
-					<!--.col-* -->
-					<div class="col-lg-5 map-section ms">
-						<div class="page_map my-4">
-							<div class="mapouter">
-								<iframe class="w-100" height="600" id="gmap_canvas"
-									src="https://maps.google.com/maps?q=first%20pavilion%20&t=&z=17&ie=UTF8&iwloc=&output=embed"
-									frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+							</form>
+						</div>
+						<!--.col-* -->
+						<div class="col-lg-5 map-section ms">
+							<div class="page_map my-4">
+								<div class="mapouter">
+									<iframe class="w-100" height="600" id="gmap_canvas"
+										src="https://maps.google.com/maps?q=first%20pavilion%20&t=&z=17&ie=UTF8&iwloc=&output=embed"
+										frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<footer
-			class="page_footer ls ms s-pt-80 s-pb-70 s-py-lg-120 s-pt-xl-135 s-pb-xl-105 c-gutter-60 text-center text-md-left">
-			<div class="container">
-				<div class="row">
-					<div class="divider-20 d-none d-xl-block"></div>
-					<div class="col-md-5 animate" data-animation="fadeInUp">
-						<div class="widget widget_text">
-							<img src="image/fp-logo-footer.png" width="40%" alt="FirstPavilionLogo">
-							<p>
-								We are a modern Information and Communication Technology Company with qualified and
-								friendly staff capable of turning your ICT issues into the futuristic innovation you
-								have in mind.
-							</p>
-							<p>We offer various services ranging from ICT consultancy to Software services.</p>
-							<div class="widget widget_social_buttons">
-								<a href="https://facebook.com/firstpavilionng" target="_blank" title="facebook"
-									data-toggle="tooltip">
-									<i class="fab fa-facebook text-primary rounded-icon mr-5"></i>
-								</a>
-								<a href="https://twitter.com/@firstpavilionng" target="_blank" title="twitter"
-									data-toggle="tooltip">
-									<i class="fab fa-twitter text-info rounded-icon mr-5"></i>
-								</a>
-								<a href="https://instagram.com/firstpavilionng" target="_blank" title="instagram"
-									data-toggle="tooltip">
-									<i class="fab fa-instagram text-danger rounded-icon"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-4 animate" data-animation="fadeInUp">
-						<div class="widget services-links">
-							<h4 class="widget-title">Services</h4>
-							<ul>
-								<li class="cat-item">
-									<i class="fas fa-check text-info mr-3"></i>
-									<a href="/space">Co-working space</a>
-								</li>
-								<li class="cat-item">
-									<i class="fas fa-check text-info mr-3"></i>
-									<a href="/beleful">Beleful</a>
-								</li>
-								<li class="cat-item">
-									<i class="fas fa-check text-info mr-3"></i>
-									<a href="/yharah">yharah</a>
-								</li>
-								<li class="cat-item">
-									<i class="fas fa-check text-info mr-3"></i>
-									<a href="/academy">I/O Academy</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3 animate" data-animation="fadeInUp">
-						<div class="widget widget_icons_list">
-							<h4 class="widget-title">Call Us</h4>
-							<p>
-								<a href="tel:+2349020455349">{{pavInfo.phone}}</a>
-							</p>
-							<a href="mailto:info@firstpavitech.com" class="small-text">
-								<i class="fas fa-envelope color-main fs-14"></i>
-								Email us
-							</a>
-							<h4 class="widget-title">Visit Us</h4>
-							<p>4, Law castle 3rd Floor opposite Fidelity Bank, Agboole Aro, Omida, Abeokuta, Ogun
-								State</p>
-							<a href="#location" class="small-text">
-								<i class="fa fa-map-marker color-main3 fs-14"></i>
-								Get Direction
-							</a>
-						</div>
-						<div class="divider-45 d-none d-md-block d-xlz-none"></div>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<section class="page_copyright ds s-py-10 background-gradient2">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="divider-15 d-none d-lg-block"></div>
-					<div class="col-md-12 text-center">
-						<p>&copy; Copyright <span class="copyright_year" id="yr"></span> All Rights Reserved</p>
-					</div>
-					<div class="divider-15 d-none d-lg-block"></div>
-				</div>
-			</div>
-		</section>
-	</div><!-- eof #box_wrapper -->
+			{{!-- footers for our website --}}
+			{{>footer}}
+		</div><!-- eof #box_wrapper -->
 	</div><!-- eof #canvas -->
 
+	{{>scriptTemplate}}
 
-	<!-- jQuery -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!-- Bootstrap tooltips -->
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-	<!-- MDB core JavaScript -->
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-	{{!-- This is font awesome cdn --}}
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
-	{{!-- year counter --}}
-	<script src="js/footerFullYr.js"></script>
-	{{!-- custom CSS --}}
-	<script src="js/compressed.js"></script>
-	<script src="js/main.js"></script>
 	<!-- Google Map Script -->
 	<script type="text/javascript"
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyvMt2LuE6NLg4NfNoPZ_qzhDM3cyqhXs&callback=initGoogleMap"></script>
