--- a/src/templates/error/404.hbs
+++ b/src/templates/error/404.hbs
@@ -38,86 +38,13 @@
 		<div class="preloader_image"></div>
 	</div>
 
-	<!-- search modal -->
-	<div class="modal" tabindex="-1" role="dialog" aria-labelledby="search_modal" id="search_modal">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<div class="widget widget_search">
-			<form class="form-inline d-flex justify-content-center md-form form-sm mt-0 search-form"
-				action="http://webdesign-finder.com/" method="get">
-				<input class="form-control form-control-sm ml-3 w-75 border-0" type="text" placeholder="Search"
-					aria-label="Search">
-			</form>
-		</div>
-	</div>
-
 	<!-- wrappers for visual page editor and boxed version of template -->
 	<div id="canvas">
 		<div id="box_wrapper">
 
-			<!-- template sections -->
-
-			<!--topline section visible only on small screens|-->
-
-			<section class="page_topline ls s-borderbottom c-my-20">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-md-6 text-md-left text-center">
-							<ul class="top-includes">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main fs-14">
-											<i class="fa fa-phone"></i>
-										</span>
-										<span class="small-text">
-											<a href="tel:+2349020455349">+234 902 045 5349</a>
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main fs-14">
-											<i class="fa fa-pen"></i>
-										</span>
-										<span class="small-text">
-											<a href="mailto:info@firstpavitech.com">info@firstpavitech.com</a>
-										</span>
-									</span>
-								</li>
-							</ul>
-						</div>
-						<div class="col-md-6 text-center text-md-right d-none d-md-block">
-							<ul class="top-includes">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main2 fs-14">
-											<img src="image/fp-logo-big.png" width="20" height="20"
-												alt="FirstPavilionLogo">
-										</span>
-										<span class="small-text">
-											<span class="small-text">
-												<a class="hover-main2" href="/"> First Pavilion Technologies</a>
-											</span>
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main2 fs-14">
-											<i class="fa fa-user"></i>
-										</span>
-										<span class="small-text">
-											<a class="hover-main2" href="/login"> Login in</a>
-										</span>
-									</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!--eof topline-->
+			{{!-- topbar menus --}}
+			{{>topbar}}
+			
 			<div class="container text-center mt-5">
 				<p>
 					<a href="/" class="btn btn-white"><span>Back To Homepage</span></a>
